contracts/protocol/stellar/contracts/macro-integration-tests/tests/ui/ttl_extendable/fail/non_struct_input.stderr
error: custom attribute panicked
 --> tests/ui/ttl_extendable/fail/non_struct_input.rs:3:1
  |
3 | #[common_macros::ttl_extendable]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: failed to parse struct: expected `struct`
